[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/graphics/slingshot-elastic.png" type="Texture" id=1]
[ext_resource path="res://Objects/Slingshot/Bone2.gd" type="Script" id=2]
[ext_resource path="res://Objects/Slingshot/InputArea.gd" type="Script" id=3]
[ext_resource path="res://Objects/Slingshot/Skeleton2D.gd" type="Script" id=4]
[ext_resource path="res://Objects/Slingshot/Slingshot.gd" type="Script" id=5]
[ext_resource path="res://Objects/Slingshot/TrajectoryDrawer/TrajectoryDrawer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/graphics/slingshot.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 50.7509

[node name="Slingshot" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": "Drag Bone2 to stretch the slingshot"
}
slingshot_elastic_force = 20

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2( -53.6923, 34.711 )
scale = Vector2( 0.559237, 0.12551 )
texture = ExtResource( 1 )
skeleton = NodePath("../Skeleton2D")
polygon = PoolVector2Array( 153.231, 2.3029, 188.994, -13.6321, 187.206, 137.75, 153.231, 153.685 )
uv = PoolVector2Array( 0, 0, 72, 0, 72, 124, 0, 124 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 0, 1, 2, 3 ) ]
bones = [ NodePath("Bone1"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Bone1/Bone2"), PoolRealArray( 1, 0, 0, 1 ) ]
__meta__ = {
"_editor_description_": ""
}

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
position = Vector2( -144.692, 34.711 )
scale = Vector2( 0.559237, 0.12551 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 153.231, -13.6321, 188.994, -13.6321, 187.206, 137.75, 153.231, 153.685 )
uv = PoolVector2Array( 0, 0, 72, 0, 72, 124, 0, 124 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 0, 1, 2, 3 ) ]
bones = [ NodePath("Bone1"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Bone1/Bone2"), PoolRealArray( 1, 0, 0, 1 ) ]
__meta__ = {
"_editor_description_": ""
}

[node name="SpriteBack" type="Sprite" parent="."]
position = Vector2( 34, 134 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 73, 0, 71, 294 )
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2( 30, 41 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Bone1" type="Bone2D" parent="Skeleton2D"]
position = Vector2( 34, -2 )
rotation = -3.14159
rest = Transform2D( -1, -4.44253e-06, 4.44253e-06, -1, 0, 0 )
default_length = 1.0

[node name="Bone2" type="Bone2D" parent="Skeleton2D/Bone1"]
position = Vector2( 60, 0 )
rest = Transform2D( 1, 0, 0, 1, 39.071, 0 )
default_length = 32.0
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Skeleton2D"]

[node name="RestPosition" type="Position2D" parent="."]
position = Vector2( -1, 58 )

[node name="SpriteFront" type="Sprite" parent="."]
position = Vector2( -31, 134 )
scale = Vector2( 0.9, 0.9 )
z_index = 2
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 74, 294 )
__meta__ = {
"_edit_lock_": true
}

[node name="InputArea" type="Area2D" parent="."]
position = Vector2( 0.507599, 54.6981 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
slingshot_bone_path = NodePath("../Skeleton2D/Bone1/Bone2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea"]
shape = SubResource( 1 )

[node name="TrajectoryDrawer" parent="." instance=ExtResource( 6 )]
position = Vector2( 12, 60 )
[connection signal="input_event" from="InputArea" to="InputArea" method="_on_InputArea_input_event"]
[connection signal="slingshot_grabbed" from="InputArea" to="." method="_on_InputArea_slingshot_grabbed"]
[connection signal="slingshot_moved" from="InputArea" to="." method="_on_InputArea_slingshot_moved"]
[connection signal="slingshot_released" from="InputArea" to="Skeleton2D" method="_on_InputArea_slingshot_released"]
[connection signal="slingshot_released" from="InputArea" to="." method="_on_InputArea_slingshot_released"]
